--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prismarine-biome": "^1.1.1",
     "prismarine-block": "^1.22.0",
     "prismarine-chat": "^1.7.1",
-    "prismarine-chunk": "^1.39.0",
+    "prismarine-chunk": "github:binmasterdotpro/prismarine-chunk#master",
     "prismarine-entity": "^2.5.0",
     "prismarine-item": "^1.17.0",
     "prismarine-nbt": "^2.0.0",
@@ -34,7 +34,7 @@
     "prismarine-recipe": "^1.3.0",
     "prismarine-registry": "^1.10.0",
     "prismarine-windows": "^2.9.0",
-    "prismarine-world": "^3.6.0",
+    "prismarine-world": "github:binmasterdotpro/prismarine-world#master",
     "protodef": "^1.18.0",
     "typed-emitter": "^1.0.0",
     "vec3": "^0.1.7"
