--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "prismarine-entity": "^2.5.0",
     "prismarine-item": "^1.17.0",
     "prismarine-nbt": "^2.0.0",
-    "prismarine-physics": "^1.9.0",
+    "prismarine-physics": "github:binmasterdotpro/prismarine-physics#master",
     "prismarine-recipe": "^1.3.0",
     "prismarine-registry": "^1.10.0",
     "prismarine-windows": "^2.9.0",
