--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "minecraft-data": "^3.76.0",
+    "minecraft-data": "github:binmasterdotpro/node-minecraft-data#master",
     "minecraft-protocol": "github:binmasterdotpro/node-minecraft-protocol#master",
     "prismarine-biome": "^1.1.1",
-    "prismarine-block": "^1.22.0",
+    "prismarine-block": "github:binmasterdotpro/prismarine-block#master",
     "prismarine-chat": "^1.7.1",
     "prismarine-chunk": "github:binmasterdotpro/prismarine-chunk#master",
     "prismarine-entity": "^2.5.0",
